--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "indecision_app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-modal": "^3.3.1",
-    "react-scripts": "1.1.1",
-    "styled-components": "^3.1.6",
-    "uuid": "^3.2.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+	"name": "indecision_app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"express": "^4.16.2",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
+		"react-modal": "^3.3.1",
+		"react-scripts": "1.1.1",
+		"styled-components": "^3.1.6",
+		"uuid": "^3.2.1"
+	},
+	"scripts": {
+		"start": "node server/server.js",
+		"heroku-postbuild": "yarn run build",
+		"start-dev": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject"
+	}
 }
